Added vim-bundler and vim-rails gem, along with some minor changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,9 @@
 [submodule "bundle/mustang-vim"]
 	path = bundle/mustang-vim
 	url = https://github.com/croaker/mustang-vim.git
+[submodule "bundle/vim-rails"]
+	path = bundle/vim-rails
+	url = git@github.com:tpope/vim-rails.git
+[submodule "bundle/vim-bundler"]
+	path = bundle/vim-bundler
+	url = git@github.com:tpope/vim-bundler.git
