--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,12 @@
 [submodule "bundle/vim-session"]
 	path = bundle/vim-session
 	url = https://github.com/xolox/vim-session.git
+[submodule "bundle/vim-javascript"]
+	path = bundle/vim-javascript
+	url = https://github.com/pangloss/vim-javascript.git
+[submodule "bundle/YouCompleteMe"]
+	path = bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
+[submodule "/Users/rodolfo/.vim/bundle/vim-ruby"]
+	path = /Users/rodolfo/.vim/bundle/vim-ruby
+	url = https://github.com/vim-ruby/vim-ruby.git
